--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,9 +1,28 @@
-<h1>Articles</h1>
-
-<ul>
-  <% @articles.each do |article| %>
-    <li>
-      <%= article.title %>
-    </li>
-  <% end %>
-</ul>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <h1>Ryan Shaw's Blog</h1>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <div class="alert alert-danger">Dont check back any time soon</div>
+      <h2>Articles <span class="badge rounded-pill bg-warning">Under construction</span></h2>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <% @articles.each do |article| %>
+        <li>
+          <a href="/articles/<%= article.id %>">
+            <%= article.title %>
+        </li>
+      <% end %>
+    </div>
+  </div>
+</div>
