--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,9 +1,9 @@
 <%= form_with model: [ @article, @article.comments.build ] do |form| %>
   <div class="card border-secondary w-75">
     <div class="card-body">
+      <h5>Add Comment<span style="float:right;"><%= form.submit class: 'btn-dark btn-sm'%></span></h5>
       <p class="card-title">
         <%= form.text_field :commenter, :placeholder => "Commenter Name" %>
-        <span style="float:right;"><%= form.submit class: 'btn-dark btn-sm'%></span>
       </p>
       <p class="card-text">
         <%= form.text_area :body, :placeholder => "Comment Body" %>
